--- a/index.html
+++ b/index.html
@@ -108,7 +108,6 @@
       transform: translateX(-50%);
       width: 40vh;
       padding: 20px;
-      margin-bottom: 80px;
       z-index: 2;
     }
 
@@ -139,6 +138,26 @@
       opacity: 0.8;
       max-height: 200px;
     }
+
+    /* Alias popup box */
+    #aliasBox {
+      position: fixed;
+      top: 15px;
+      left: 50%;
+      transform: translateX(-50%);
+      background: rgba(0,0,0,0.8);
+      padding: 10px 20px;
+      border-radius: 10px;
+      border: 1px solid rgba(255,255,255,0.2);
+      font-size: 14px;
+      z-index: 10;
+      opacity: 0;
+      transition: opacity 0.5s ease;
+      pointer-events: none;
+    }
+    #aliasBox.show {
+      opacity: 1;
+    }
   </style>
 </head>
 <body>
@@ -160,6 +179,8 @@
     <div id="logEntries">Loading…</div>
   </div>
 
+  <div id="aliasBox"></div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/particles.js/2.0.0/particles.min.js"></script>
 
   <script>
@@ -174,8 +195,15 @@
     // Cryptic lines map
     const crypticLines = {
       "chinmay": 'Someone rang the doorbell 🔔\n"The chimney blew white smoke"',
-      "aadity": 'Someone rang the doorbell 🔔\n"The witch of Venus has summoned you"',
-      "ganik": 'Someone rang the doorbell 🔔\n"The garlic has ripened"'
+      "aadity": '"The witch of Venus has summoned you" 🔔',
+      "ganik": '"The garlic has ripened" 🔔'
+    };
+
+    // Cryptic aliases (for on-screen reveal)
+    const crypticAliases = {
+      "chinmay": "Chimney",
+      "aadity": "Witch of Venus",
+      "ganik": "Garlic"
     };
 
     function cap(s) { return s ? s.charAt(0).toUpperCase() + s.slice(1) : s; }
@@ -209,6 +237,14 @@
         });
       } catch (e) {
         console.error("Failed to send ntfy notification:", e);
+      }
+
+      // --- Show alias box if applicable ---
+      if (crypticAliases[nameInput]) {
+        const aliasBox = document.getElementById("aliasBox");
+        aliasBox.textContent = `Your alias is: ${crypticAliases[nameInput]}`;
+        aliasBox.classList.add("show");
+        setTimeout(() => aliasBox.classList.remove("show"), 6000);
       }
 
       // --- JSONBin: update log ---
